try fix text too large on phone

--- a/aaron/src/styles/style.css
+++ b/aaron/src/styles/style.css
@@ -62,7 +62,7 @@ body {
      .card {
        border-radius: 3px;
        margin: 2px;
-       font-size: 1.3em; /* 1.5rem; */
+       font-size: 1.2em; /* 1.5rem; */
        color: #fff;
        font-weight: 700;
        height: 7rem;
@@ -82,6 +82,10 @@ body {
   
     .flipCard {
       transform: rotateY(180deg);
+    }
+
+    .card-text {
+      padding:10px;
     }
     
     .card-front, .card-back {
